deleted uneccessary files, adjusted css, and js files, updated naming conventions

--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
+    <!-- start button -->
+
     <div class="start-btn">
         <button>Start Quiz</button>
     </div>
+
+    <!-- info / rules box -->
+
     <div class="info-box">
         <div class="info-title"><span>Rules</span></div>
         <div class="info-list">
@@ -25,7 +30,9 @@
             <button class="restart">Continue</button>
         </div>
     </div>
-    <!-- quiz -->
+
+    <!-- quiz box -->
+
     <div class="quiz-box">
         <header>
             <div class="title">JavaScript Quiz</div>
@@ -36,15 +43,15 @@
             <div class="time-line"></div>
         </header>
         <section>
-            <div class="question-text">
+            <div class="que-text">
                 <!-- populates from JavaScript -->
             </div>
-            <div class="answer-text">
+            <div class="option-list">
                 <!-- populates from JavaScript -->
             </div>
         </section>
         <footer>
-            <div class="total-questions">
+            <div class="total-que">
                 <!-- populates from JavaScript -->
             </div>
             <button class="next-btn">Next Question</button>
@@ -59,7 +66,7 @@
                 <i class="fas fa-crown"></i>
             </div>
             <div class="complete-text">Congratulations, you've completed the JavaScript quiz!</div>
-            <div class="score-txt">
+            <div class="score-text">
                 <!-- populates from Javascript -->
             </div>
             <div class="buttons">
